# ComfyUI-BerniniRWrapper

./: .comfyignore  .gitignore  LICENSE.txt  README.md  README_DEVELOPER.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
attention/: __init__.py  backends.py  config_node.py
context/: __init__.py  windows.py
example/: example.json
models/: __init__.py  loader.py  wan_compile.py  wan_model.py
nodes/: __init__.py  bernini_sampling.py  block_swap_args.py  conditioning.py  context_window.py  guidance_config.py  guidance_schedule.py  loaders.py  lora_loader.py  nag.py  prompt_embedding.py  sampler.py  sampler_dual_expert.py  segment_schedule.py  teacache_args.py  vae.py
utils/: __init__.py  block_ortho.py  block_reader.py  block_swap.py  color_match.py  injection.py  keys.py  log.py  lora.py  model_manager.py  parsing.py  teacache.py  tensor_ops.py  text_cache.py  types.py  vae_wrapper.py  vram.py  wanvideo_vae.py
web/: guidance_ui.js
