[project]
name = "ComfyUI-BerniniRWrapper" # Unique registry identifier. IMMUTABLE after first publish — change now if you want a different slug.
description = "Wan-Video based video generation custom node: seven-mode guidance (CFG/APG/RAAG/S2/Z2/STG_A/STG_R), context-window sampling, and segment prompt-travel."
version = "1.0.1" # Semantic version. Bumping this + pushing pyproject.toml triggers the publish Action.
license = { file = "LICENSE.txt" }
dependencies = [] # Auto-populated from requirements.txt at publish time.

[project.urls]
Repository = "https://github.com/xiaolibai-sys/ComfyUI-BerniniRWrapper"

#  Used by Comfy Registry https://registry.comfy.org
[tool.comfy]
PublisherId = "wenli"
DisplayName = "ComfyUI-BerniniR Wrapper" # Shown in ComfyUI / Registry. Changeable later.
Icon = "https://raw.githubusercontent.com/xiaolibai-sys/ComfyUI-BerniniRWrapper/main/icon.png"
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility (uncomment to pin).
